Optimised the peak calculation

--- a/python_code/peak_featureset.ipynb
+++ b/python_code/peak_featureset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,11 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Seq_list = []\\nWaveNumber_list = []\\nAbsorbance_list = []\\n\\nfor sample in samples:\\n    subset = spectra_df[spectra_df['SpecID'] == sample]\\n    peaks, _ = find_peaks(x=subset['Absorbance'], distance=152, prominence=42, width=6)\\n    Seq_list.append(peaks)\\n    peak_rows = subset.iloc[peaks]\\n    WaveNumber_list.append(peak_rows['WaveNumber'].to_list())\\n    Absorbance_list.append(peak_rows['Absorbance'].to_list())\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Seq_list = []\n",
+    "\"\"\"Seq_list = []\n",
     "WaveNumber_list = []\n",
     "Absorbance_list = []\n",
     "\n",
@@ -230,12 +241,30 @@
     "    Seq_list.append(peaks)\n",
     "    peak_rows = subset.iloc[peaks]\n",
     "    WaveNumber_list.append(peak_rows['WaveNumber'].to_list())\n",
+    "    Absorbance_list.append(peak_rows['Absorbance'].to_list())\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Seq_list = []\n",
+    "WaveNumber_list = []\n",
+    "Absorbance_list = []\n",
+    "\n",
+    "for _, group in spectra_df.groupby('SpecID'):\n",
+    "    peaks, _ = find_peaks(x=group['Absorbance'], distance=152, prominence=42, width=6)\n",
+    "    Seq_list.append(peaks)\n",
+    "    peak_rows = group.iloc[peaks]\n",
+    "    WaveNumber_list.append(peak_rows['WaveNumber'].to_list())\n",
     "    Absorbance_list.append(peak_rows['Absorbance'].to_list())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,26 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    Status                                               Seq  \\\n",
-      "SpecID                                                                         \n",
-      "201210-1-00         Normal                                 [727, 1026, 1820]   \n",
-      "201210-1-01         Normal          [403, 617, 1021, 1378, 1532, 1818, 2074]   \n",
-      "201210-1-02         Normal                [412, 600, 1049, 1552, 1812, 2079]   \n",
-      "201210-1-03         Normal      [17, 385, 591, 1047, 1411, 1590, 1884, 2052]   \n",
-      "201210-1-04         Normal     [368, 616, 785, 1173, 1445, 1602, 1808, 2090]   \n",
-      "...                    ...                                               ...   \n",
-      "210526-3-45  Hyperglycemia           [116, 410, 925, 1174, 1384, 1808, 1964]   \n",
-      "210526-3-46  Hyperglycemia           [100, 349, 932, 1171, 1381, 1804, 1965]   \n",
-      "210526-3-47  Hyperglycemia      [140, 405, 768, 971, 1173, 1416, 1798, 1990]   \n",
-      "210526-3-48  Hyperglycemia  [93, 250, 412, 738, 985, 1172, 1397, 1602, 2008]   \n",
-      "210526-3-49  Hyperglycemia             [75, 424, 753, 987, 1172, 1398, 2007]   \n",
+      "                    Status                                            Seq  \\\n",
+      "SpecID                                                                      \n",
+      "201210-1-00         Normal                              [727, 1026, 1820]   \n",
+      "201210-1-01         Normal       [403, 617, 1021, 1378, 1532, 1818, 2074]   \n",
+      "201210-1-02         Normal             [412, 600, 1049, 1552, 1812, 2079]   \n",
+      "201210-1-03         Normal   [17, 385, 591, 1047, 1411, 1590, 1884, 2052]   \n",
+      "201210-1-04         Normal  [368, 616, 785, 1173, 1445, 1602, 1808, 2090]   \n",
+      "...                    ...                                            ...   \n",
+      "210526-3-45  Hyperglycemia         [108, 471, 740, 980, 1173, 1353, 1606]   \n",
+      "210526-3-46  Hyperglycemia                [99, 474, 766, 979, 1175, 1361]   \n",
+      "210526-3-47  Hyperglycemia   [118, 468, 729, 957, 1175, 1341, 1588, 1949]   \n",
+      "210526-3-48  Hyperglycemia         [104, 468, 726, 983, 1177, 1357, 1954]   \n",
+      "210526-3-49  Hyperglycemia                   [367, 739, 1171, 1373, 1729]   \n",
       "\n",
       "                                                    WaveNumber  \\\n",
       "SpecID                                                           \n",
@@ -282,11 +311,11 @@
       "201210-1-03  [211.61731, 463.09796, 603.87244, 915.48975, 1...   \n",
       "201210-1-04  [451.48065, 620.95673, 736.44647, 1001.5945, 1...   \n",
       "...                                                        ...   \n",
-      "210526-3-45  [279.27106, 480.18222, 832.11847, 1002.2779, 1...   \n",
-      "210526-3-46  [268.33713, 438.49658, 836.90204, 1000.2278, 1...   \n",
-      "210526-3-47  [295.67197, 476.76538, 724.82916, 863.55353, 1...   \n",
-      "210526-3-48  [263.55353, 370.84283, 481.54898, 704.328, 873...   \n",
-      "210526-3-49  [251.25285, 489.74942, 714.57861, 874.48749, 1...   \n",
+      "210526-3-45  [273.80411, 521.86786, 705.69476, 869.70386, 1...   \n",
+      "210526-3-46  [267.65375, 523.91797, 723.4624, 869.02051, 10...   \n",
+      "210526-3-47  [280.63782, 519.81775, 698.17767, 853.98633, 1...   \n",
+      "210526-3-48  [271.07062, 519.81775, 696.12756, 871.75397, 1...   \n",
+      "210526-3-49  [450.79727, 705.01141, 1000.2278, 1138.2688, 1...   \n",
       "\n",
       "                                                    Absorbance  \n",
       "SpecID                                                          \n",
@@ -296,11 +325,11 @@
       "201210-1-03  [10350.545, 2536.3599, 3342.7229, 3452.3679, 3...  \n",
       "201210-1-04  [2277.2156, 2264.5063, 2167.6958, 2238.8494, 2...  \n",
       "...                                                        ...  \n",
-      "210526-3-45  [3184.2339, 2624.918, 2807.3567, 2741.6816, 29...  \n",
-      "210526-3-46  [3096.5593, 2572.4224, 2768.9221, 2700.7693, 2...  \n",
-      "210526-3-47  [3061.0017, 2500.0474, 2544.4055, 2621.6912, 2...  \n",
-      "210526-3-48  [2860.9475, 2409.3394, 2507.4309, 2459.8906, 2...  \n",
-      "210526-3-49  [2733.9106, 2303.8423, 2358.3406, 2388.7783, 2...  \n",
+      "210526-3-45  [2013.4814, 1650.8135, 1682.9326, 1691.0598, 1...  \n",
+      "210526-3-46  [1956.9333, 1602.1025, 1624.1553, 1634.3423, 1...  \n",
+      "210526-3-47  [1906.7185, 1571.1713, 1579.2836, 1575.1331, 1...  \n",
+      "210526-3-48  [1850.5511, 1533.9598, 1549.0426, 1545.3933, 1...  \n",
+      "210526-3-49  [1482.5781, 1507.8912, 1505.2144, 1445.8882, 1...  \n",
       "\n",
       "[3045 rows x 4 columns]\n"
      ]
@@ -315,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
