Created first baseline test

--- a/python_code/peak_featureset.ipynb
+++ b/python_code/peak_featureset.ipynb
@@ -82,11 +82,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prominences': array([161.5275, 127.9463, 179.4123, 401.8449, 151.1426, 116.7102]), 'left_bases': array([  19,  317,  317,  317, 1450, 1769]), 'right_bases': array([2631,  845, 1245, 2631, 2631, 2631]), 'widths': array([ 22.7445855 ,  59.09598596,  24.89739757, 398.615044  ,\n",
+      "         7.7646826 ,  31.34258561]), 'width_heights': array([3134.52185, 2614.04885, 2712.12535, 2634.93395, 2734.4744 ,\n",
+      "       2658.6437 ]), 'left_ips': array([ 109.08621896,  724.42219727, 1155.74527231, 1256.23123137,\n",
+      "       1596.05797593, 1818.71028735]), 'right_ips': array([ 131.83080446,  783.51818323, 1180.64266988, 1654.84627537,\n",
+      "       1603.82265854, 1850.05287295])}\n"
+     ]
+    }
+   ],
    "source": [
-    "peaks, _ = find_peaks(x=sample['Absorbance'], distance=152, prominence=42, width=6)"
+    "peaks, _ = find_peaks(x=sample['Absorbance'], distance=152, prominence=42, width=6)\n",
+    "print(_)"
    ]
   },
   {
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
