Added logistic regression

--- a/python_code/classification_test.ipynb
+++ b/python_code/classification_test.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This notebook classifies the samples based on their spectral peaks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -170,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract the features and labels and create the training and test sets."
+    "Extract the features and labels."
    ]
   },
   {
@@ -181,34 +188,6 @@
    "source": [
     "X = df['Absorbance']\n",
     "y = df['Status']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0                       [1851.9185, 1746.4041, 1537.9485]\n",
-      "1       [1998.4773, 2034.2784, 1977.515, 1779.342, 173...\n",
-      "2       [2214.0876, 2846.9824, 3696.4109, 2195.7212, 2...\n",
-      "3       [10350.545, 2536.3599, 3342.7229, 3452.3679, 3...\n",
-      "4       [2277.2156, 2264.5063, 2167.6958, 2238.8494, 2...\n",
-      "                              ...                        \n",
-      "3040    [2013.4814, 1650.8135, 1682.9326, 1691.0598, 1...\n",
-      "3041    [1956.9333, 1602.1025, 1624.1553, 1634.3423, 1...\n",
-      "3042    [1906.7185, 1571.1713, 1579.2836, 1575.1331, 1...\n",
-      "3043    [1850.5511, 1533.9598, 1549.0426, 1545.3933, 1...\n",
-      "3044    [1482.5781, 1507.8912, 1505.2144, 1445.8882, 1...\n",
-      "Name: Absorbance, Length: 3045, dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X)"
    ]
   },
   {
